Added new default platform target for Eclipse Juno.