@@ -19,6 +19,8 @@
 				<version>${tycho-version}</version>
 				<configuration>
 					<argLine>-XX:MaxPermSize=256m -Xms40m -Xmx512m</argLine>
+					<!-- when running on a mac, you have to use -XstartOnFirstThread-->
+                                        <!--argLine>-XstartOnFirstThread -XX:MaxPermSize=256m -Xms40m -Xmx512m</argLine-->
 					<useUIHarness>true</useUIHarness>
 					<dependencies>
 						<dependency>
